<resources>
    <string name="app_name">Командировки</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Enter">Войти</string>
    <string name="Autoriz">Зарегестрироваться</string>
    <string name="BUSINESS_TRIPS">Командировки</string>
    <string name="STAFF">Сотрудники</string>
    <string name="POSITIONS">Должности</string>
    <string name="Open">Открыть</string>
    <string name="Nazvanie">Название</string>
    <string name="disc">Разряд</string>
    <string name="salary">Оклад</string>
    <string name="add">Добавить</string>
    <string name="Surname">Фамилиия</string>
    <string name="FirstName">Имя</string>
    <string name="LastName">Отчество</string>
    <string name="Pos">Должность</string>
    <string name="clear">Очистить</string>
    <string name="Sotrudnik">Сотрудник</string>
    <string name="City">Город</string>
    <string name="Size">Размер суточных</string>
    <string name="Users">Радактирование пользователей</string>
    <string name="Users1">Радактирование профиля</string>
    <string name="Save">Сохранить</string>
    <string name="Delete">Удалить</string>
</resources>