<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffActivity">
    <EditText
        android:id="@+id/Sotrudnik"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/Surname"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Size"/>

    <EditText
        android:id="@+id/Size"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/FirstName"
        android:textSize="10pt"
        app:layout_constraintEnd_toStartOf="@id/City"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sotrudnik"
        app:layout_constraintBottom_toTopOf="@id/Position"/>
    <EditText
        android:id="@+id/City"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/LastName"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Size"
        app:layout_constraintTop_toBottomOf="@+id/Sotrudnik"
        app:layout_constraintBottom_toTopOf="@id/Position"/>

    <EditText
        android:id="@+id/Position"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/Pos"
        android:gravity="center"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/City" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Position"
        app:layout_constraintBottom_toTopOf="@id/dbOutput"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/Position"
        app:layout_constraintBottom_toTopOf="@id/dbOutput"/>

    <TableLayout
        android:id="@+id/dbOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear">
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>