<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:hint="@string/Login"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Password"
        android:password="true"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:text="@string/Enter"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:text="@string/Autoriz"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password" />
</androidx.constraintlayout.widget.ConstraintLayout>